2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	* gtksourceview/gtksourcecompletiontrigger.c:
	* gtksourceview/gtksourcecompletiontrigger.h:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	* tests/completion-simple.c:
	Remove set_active func on completion.
	Remove deactivate trigger func and added activate signal.

2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	* gtksourceview/gtksourcecompletionproposal.c:
	* gtksourceview/gtksourcecompletionproposal.h:
	Fixed some doc warnings.

2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* docs/reference/gtksourceview-2.0-sections.txt:
	* docs/reference/gtksourceview-docs.sgml:
	* gtksourceview/gtksourcecompletiontriggerkey.h:
	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	* gtksourceview/gtksourcecompletionprovider.c:
	* gtksourceview/gtksourcecompletioninfo.c:
	* gtksourceview/gtksourcecompletionproposal.c:
	* gtksourceview/gtksourcecompletionprovider.h:
	* gtksourceview/gtksourcecompletioninfo.h:
	* gtksourceview/gtksourcecompletiontrigger.c:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	Updated docs and use proper includes.

2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* tests/completion-simple.c:
	Add a custom widget for infos.

2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* tests/completion-simple.c:
	Use proper coding style.

2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview.c:
	Load GtkSourceCompletion only when requested.

2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletiontriggerkey.h:
	* gtksourceview/Makefile.am:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	* tests/completion-simple.c:
	* tests/gsc-provider-test.c:
	* tests/gsc-provider-test.h: