@@ -323,10 +323,10 @@ create_completion(void)
 							    "User Request Trigger",
 							    "<Control>Return");
 	
-	gtk_source_completion_register_trigger (comp, GTK_SOURCE_COMPLETION_TRIGGER (ur_trigger));
+	gtk_source_completion_add_trigger (comp, GTK_SOURCE_COMPLETION_TRIGGER (ur_trigger));
 
-	gtk_source_completion_register_provider (comp, GTK_SOURCE_COMPLETION_PROVIDER (prov_test),
-						 GTK_SOURCE_COMPLETION_TRIGGER (ur_trigger));
+	gtk_source_completion_add_provider (comp, GTK_SOURCE_COMPLETION_PROVIDER (prov_test),
+					    GTK_SOURCE_COMPLETION_TRIGGER (ur_trigger));
 	
 	g_signal_connect (comp, "show", G_CALLBACK (show_completion_cb), NULL);
 	g_signal_connect (comp, "hide", G_CALLBACK (hide_completion_cb), NULL);
